# dSBOM-engine

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
.github/workflows/: release.yml  security.yml  trivy.yml
include/: artifact_generator.hpp  memory_sniffer.hpp  process_spawner.hpp
src/: artifact_generator.cpp  main.cpp  memory_sniffer.cpp  process_spawner.cpp
tests/: basic_link.c  dynamic_load.c  fork_tree.c  memory_injections.c  stress_syscall.c
